@@ -19,6 +19,7 @@ typedef struct controller_s controller_t;
 // strseg.c interface
 
 #define STRSEG(s) ((strseg_t){ s, strlen(s) })
+#define STRSEG_LITERAL(s) ((const strseg_t){ s, sizeof(s)-1 })
 typedef struct strseg_s {
 	const char *data;
 	int len;
@@ -309,6 +310,7 @@ typedef struct fd_flags_s {
 		trunc: 1,
 		nonblock: 1,
 		pipe: 1,
+		socket: 1,
 		special: 1,
 		is_const: 1;
 } fd_flags_t;
@@ -333,7 +335,7 @@ fd_t *      fd_get_pipe_peer(fd_t *fd);
 
 // Open a pipe from one named FD to another
 // returns a ref to the write-end, which has a pointer to the read-end.
-fd_t * fd_new_pipe(strseg_t name1, int fd1, strseg_t name2, int fd2);
+fd_t * fd_new_pipe(strseg_t name1, int fd1, strseg_t name2, int fd2, bool socket);
 
 // Open a file on the given name, possibly closing a handle by that name
 fd_t * fd_new_file(strseg_t name, int fdnum, fd_flags_t flags, strseg_t path);
